# mesh-infinity

./: .gitignore  AGENTS.md  CONTRIBUTOR_STANDARDS.md  Cargo.toml  Makefile  PMWAN_ARCHITECTURE.md  README.md  SPEC.md  STRUCTURE.md  issues-unverified.md  issues.md  test_integration.rs
backend/auth/: Cargo.toml  identity.rs  keystore.rs  lib.rs  persistence.rs  storage.rs  web_of_trust.rs
backend/auth/src/: identity.rs  lib.rs  web_of_trust.rs
backend/core/: Cargo.toml  core.rs  error.rs  lib.rs  service.rs
backend/core/application_gateway/: app_registry.rs  mod.rs  protocol_handlers.rs
backend/core/exit_node/: bandwidth_manager.rs  mod.rs  traffic_router.rs
backend/core/file_transfer/: chunk_manager.rs  mod.rs  transfer_manager.rs  transfer_queue.rs
backend/core/mesh/: connection.rs  mod.rs  obfuscation.rs  peer.rs  routing.rs  wireguard.rs
backend/core/network_stack/: dns_resolver.rs  hop_router.rs  mesh_address.rs  mesh_packet_router.rs  mod.rs  nat_traversal.rs  policy_router.rs  virtual_interface.rs  vpn_service.rs
backend/core/security/: mod.rs  policy_engine.rs  sandbox.rs
backend/core/src/: core.rs  error.rs  lib.rs  service.rs
backend/core/src/application_gateway/: app_registry.rs  mod.rs  protocol_handlers.rs
backend/core/src/auth/: identity.rs  mod.rs  storage.rs  web_of_trust.rs
backend/core/src/crypto/: deniable.rs  mod.rs  pfs.rs  secmem.rs
backend/core/src/discovery/: adaptive.rs  bootstrap.rs  mdns.rs  mod.rs  service.rs
backend/core/src/exit_node/: bandwidth_manager.rs  mod.rs  traffic_router.rs
backend/core/src/file_transfer/: chunk_manager.rs  mod.rs  transfer_manager.rs  transfer_queue.rs
backend/core/src/mesh/: connection.rs  mod.rs  obfuscation.rs  peer.rs  routing.rs  wireguard.rs
backend/core/src/network_stack/: dns_resolver.rs  hop_router.rs  mesh_address.rs  mesh_packet_router.rs  mod.rs  nat_traversal.rs  policy_router.rs  virtual_interface.rs  vpn_service.rs
backend/core/src/security/: mod.rs  policy_engine.rs  sandbox.rs
backend/core/src/transport/: manager.rs  mod.rs  traits.rs
backend/crypto/: Cargo.toml  backup.rs  channel_key.rs  deniable.rs  double_ratchet.rs  lib.rs  message_crypto.rs  message_encrypt.rs  pfs.rs  primitives.rs  ring_sig.rs  safety_number.rs  secmem.rs  sender_keys.rs  session.rs  sigma.rs  signing.rs  vault.rs  x3dh.rs
backend/crypto/src/: backup.rs  deniable.rs  lib.rs  message_crypto.rs  pfs.rs  secmem.rs  vault.rs
backend/discovery/: Cargo.toml  catalog.rs  dht.rs  jumpstart.rs  lib.rs  mdns.rs  peer_codec.rs  service.rs
backend/discovery/src/: lib.rs
backend/ffi/: Cargo.toml  lib.rs
backend/ffi/src/: lib.rs
backend/mesh/: Cargo.toml  coordinator.rs  forwarder.rs  mod.rs  packet.rs
backend/mesh/src/: lib.rs  peer.rs  routing.rs  wireguard.rs
backend/transport/: Cargo.toml  bluetooth.rs  can_bus.rs  cjdns.rs  clearnet.rs  core_manager.rs  cover_traffic.rs  health.rs  i2p.rs  kcp.rs  layer2.rs  lib.rs  libp2p_transport.rs  manager.rs  mixnet.rs  mod.rs  nfc.rs  nl80211.rs  obfuscation.rs  offline.rs  overlay_client.rs  rf.rs  rf_sdr.rs  solver.rs  tailscale.rs  telephone.rs  tor.rs  trait_transport.rs  traits.rs  ultrasonic.rs  usb_serial.rs  wifi_direct.rs  wireguard.rs  yggdrasil.rs  zerotier.rs
backend/transport/src/: bluetooth.rs  clearnet.rs  i2p.rs  lib.rs  manager.rs  tor.rs
frontend/: Cargo.toml  README.md  analysis_options.yaml  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_graph.json
frontend/android/app/: build.gradle.kts
frontend/ios/: Podfile
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/app/: app.dart  app_theme.dart  debug_logger.dart
frontend/lib/backend/: backend_bridge.dart  backend_models.dart  event_bus.dart  event_models.dart  file_transfer_models.dart  peer_models.dart  thread_store.dart
frontend/lib/backend/models/: file_transfer_models.dart  message_models.dart  network_models.dart  peer_models.dart  room_models.dart  settings_models.dart
frontend/lib/core/layout/: layout_spec.dart
frontend/lib/core/state/: mesh_state.dart
frontend/lib/core/widgets/: bottom_sheet_handle.dart  empty_state.dart  error_banner.dart  online_indicator.dart  section_header.dart
frontend/lib/features/calls/: call_overlay.dart  calls_state.dart
frontend/lib/features/chat/: direct_screen.dart  rooms_screen.dart
frontend/lib/features/contacts/: all_contacts_screen.dart  online_screen.dart  requests_screen.dart
frontend/lib/features/files/: files_state.dart  shared_screen.dart
frontend/lib/models/: thread_models.dart
frontend/lib/navigation/: navigation_manager.dart
frontend/lib/onboarding/: onboarding_screen.dart
frontend/lib/platform/: android_app_catalog_bridge.dart  android_keystore_bridge.dart  android_proximity_bridge.dart  android_proximity_sync.dart  android_startup_bridge.dart  android_startup_sync.dart  android_vpn_bridge.dart
frontend/lib/services/: dependency_container.dart  implementations.dart  service_interfaces.dart
frontend/lib/shell/: app_shell.dart  badge_state.dart  help_screen.dart  nav_drawer.dart  section_bottom_bar.dart  security_status_bar.dart  shell_state.dart
frontend/lib/state/: app_state.dart
frontend/lib/widgets/: mask_avatar.dart  profile_card.dart  sandboxed_media_view.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: CMakeLists.txt  app_entry.cc  main.cc  my_application.cc  my_application.h
frontend/macos/: Podfile
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/src/: lib.rs
frontend/src/api/: mod.rs
frontend/src/cli/: mod.rs
frontend/test/: widget_test.dart
frontend/windows/runner/: Runner.rc
fuzz/: Cargo.toml
fuzz/corpus/fuzz_message_frame/: seed_01_minimal_valid
fuzz/corpus/fuzz_nfc_ndef/: seed_01_valid_pairing_record
fuzz/corpus/fuzz_pairing_payload/: seed_01_minimal_valid
fuzz/fuzz_targets/: fuzz_message_frame.rs  fuzz_nfc_ndef.rs  fuzz_pairing_payload.rs
ui/: Cargo.toml  main.slint
ui/src/: lib.rs  main.rs
ui/src/integration/: mod.rs
(+376 files in other folders)
