[package]
name = "mesh-infinity"
version = "0.2.0"
edition = "2021"

[lib]
name = "mesh_infinity"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
transport-bluetooth-native = ["dep:btleplug"]
transport-rf-meshtastic = ["dep:meshtastic"]
# Enables TUN/VPN system-wide routing (routes all OS traffic through the mesh).
# Requires elevated privileges at runtime: root/CAP_NET_ADMIN on Linux/macOS,
# Administrator + wintun.dll on Windows.
# The app runs fully without this feature; only exit-node/full-tunnel routing
# is gated behind it.  Enable with: cargo build --features vpn-routing
vpn-routing = []

[dependencies]
# Core networking
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"
config = "0.15"

# Cryptography
ring = "0.17"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
bip39 = "2.0"
hkdf = "0.12"
sha2 = "0.10"
rand_core = "0.10"
zeroize = "1.8"
base64 = "0.22"

# Network utilities
socket2 = "0.6"
btleplug = { version = "0.12", optional = true }
meshtastic = { version = "0.1.8", optional = true }

# Tor integration
arti-client = { version = "0.40", features = ["tokio", "native-tls"] }
tor-rtcompat = { version = "0.40", features = ["tokio", "native-tls"] }

# File transfer
tokio-stream = "0.1"
bytes = "1.0"
crc32fast = "1.3"

# DNS
trust-dns-resolver = "0.23"
trust-dns-server = "0.23"
mdns-sd = "0.18"

# Performance
flate2 = "1.0"
lru = "0.16"

# Backend services
getrandom = "0.4"
time = { version = "0.3", features = ["formatting"] }
crossbeam-channel = "0.5"

# FFI
flutter_rust_bridge = "1.80.0"
libc = "0.2"
jni = "0.22"

# Force vendored OpenSSL so cross-compilation (Android NDK, etc.) works without
# requiring a pre-installed OpenSSL for each target.
openssl = { version = "0.10", features = ["vendored"] }

# Virtual network interface
# tun-tap (Unix/Linux TUN) and pnet are POSIX-only.
# wintun provides the equivalent Windows TUN driver (same library used by WireGuard).
# Platform keystore — used on every platform except Android (which uses its own
# JNI-based Android Keystore path in backend/auth/keystore.rs).
# On Linux without a running Secret Service daemon this falls back gracefully to
# the filesystem path inside persistence.rs.
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = "3"

[target.'cfg(unix)'.dependencies]
pnet = "0.35"
tun-tap = "0.1"

[target.'cfg(windows)'.dependencies]
wintun = "0.5"

[dev-dependencies]
tempfile = "3.24"
