[package]
name = "net-infinity-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
net-infinity-core = { path = "../backend/core" }
net-infinity-ffi = { path = "../backend/ffi" }

# For potential UI integration
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"