[package]
name = "net-infinity-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "net_infinity_ui"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Slint UI toolkit
slint = { version = "1.14" }

# Utilities
log = "0.4"
env_logger = "0.10"
getrandom = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset"] }

[build-dependencies]
slint-build = "1.0"
