[package]
name = "net-infinity-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
net-infinity-core = { path = "../core" }
net-infinity-crypto = { path = "../crypto" }

# Cryptography
ring = "0.16"
ed25519-dalek = "1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"