[package]
name = "net-infinity-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
net-infinity-core = { path = "../core" }

# Cryptography
ring = "0.16"
x25519-dalek = "1.1"
ed25519-dalek = "1.0"
chacha20poly1305 = { version = "0.10", features = ["xchacha20poly1305"] }
argon2 = "0.5"
bip39 = "2.0"
hkdf = "0.12"
sha2 = "0.10"
rand_core = "0.6"
zeroize = "1.7"
base64 = "0.22"

# Utilities
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
