[package]
name = "net-infinity-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
net-infinity-core = { path = "../core" }
net-infinity-mesh = { path = "../mesh" }

# Utilities
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }