[package]
name = "net-infinity-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "net-infinity_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
net-infinity-core = { path = "../core" }
net-infinity-transport = { path = "../transport" }
net-infinity-crypto = { path = "../crypto" }
net-infinity-auth = { path = "../auth" }
net-infinity-mesh = { path = "../mesh" }
net-infinity-discovery = { path = "../discovery" }

# FFI
flutter_rust_bridge = "1.80.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# For C compatibility
libc = "0.2"