[package]
name = "net-infinity-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
net-infinity-core = { path = "../core" }
net-infinity-transport = { path = "../transport" }
net-infinity-crypto = { path = "../crypto" }
net-infinity-auth = { path = "../auth" }

# WireGuard
boringtun = "0.3"

# Utilities
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }