[package]
name = "net-infinity-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
net-infinity-core = { path = "../core" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# Transport-specific dependencies
arti = "0.1"
tor-rtcompat = "0.1"
socket2 = "0.5"

# WireGuard
boringtun = "0.3"